--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ dotlottie-player {
   transition: transform 0.2s ease;
   cursor: pointer;
 }
-.nav-buttons .nav-icon{
+.nav-buttons .nav-icon, .cart-icon, .profile-icon{
   position: relative;
   display: flex;
   align-items: center;
@@ -201,6 +201,20 @@ dotlottie-player {
   transition: transform 0.2s ease;
   flex-shrink: 0;
   cursor: pointer;
+}
+.cart-badge{
+  color: #684F36;
+  background-color: #EDE3D9;
+  font-size: 8px;
+  width: 16px;
+  height: 16px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  display: none; /* Hidden by default */
 }
 /*user profile dropdown styles*/
 .profile-container{
@@ -239,12 +253,12 @@ dotlottie-player {
   font-weight: 400;
   display: block;
 }
-.nav-buttons .nav-icon img, .profile-container img{
+.nav-buttons .nav-icon img, .profile-container img, .cart-icon img{
   width: 100%;
   height: auto;
   object-fit: contain;
 }
-.nav-buttons .nav-icon:hover, .auth-button:hover{
+.nav-buttons .nav-icon:hover, .auth-button:hover, .nav-buttons .cart-icon:hover, .nav-buttons .profile-icon:hover{
   transform: scale(1.1);
 }
 /*navbar categories styles*/
@@ -255,7 +269,7 @@ dotlottie-player {
   padding: 0 40px;
   height: 60px;
 }
-.nav-links {
+.nav-links{
   display: flex;
   list-style: none;
   padding: 0;
@@ -839,6 +853,10 @@ to { opacity: 0; transform: translateX(30px); }
   cursor: pointer;
   transition: background 0.2s ease;
 }
+.continue-shopping a{
+  text-decoration: none;
+  color: #fff;
+}
 .continue-shopping:hover {
   background: #65503A;
 }
@@ -1263,12 +1281,22 @@ to { opacity: 0; transform: translateX(30px); }
   flex-direction: row-reverse;
   justify-content: space-evenly;
   align-items: center;
+  max-height: 800px;
+  width: 100%;
 }
-#mainImage{
-  max-width: 80%;
+.main-image{
+  width: 80%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+.main-image img{
+  width: 100%;
+  height: auto;
   object-fit: cover;
 }
 .secondary-images{
+  width: 20%;
   height: 100%;
   margin-right: 10px;
   display: flex;
@@ -1549,6 +1577,26 @@ to { opacity: 0; transform: translateX(30px); }
 }
 
 /*LISTING.HTML STYLES*/
+/*listing animation styles*/
+#listingOverlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /*dimmed background*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+#listingAnimation{
+  display: none;
+  text-align: center;
+  padding: 20px;
+  border-radius: 8px;
+}
+/*listing container styles*/
 .listing{
   display: flex;
   flex-direction: column;
@@ -1572,6 +1620,7 @@ to { opacity: 0; transform: translateX(30px); }
   position: fixed;
   left: 0;
   right: 0;
+  z-index: 2;
 }
 .progress-bar .step{
   flex: 1;
